Prepare for form launch

--- a/virtual.html
+++ b/virtual.html
@@ -79,6 +79,17 @@
   <h4 class="section-header">November 13 - 15, 2020<br>Via Twitch and Discord</h4>
 
 <p>Presented by Pretty Princess Club and JFashion On Demand<br>with Discord support by Bay Area Kei</p> 
+<hr id ="schedule">
+<h4 class="section-header">Event Timeline and Schedule</h4>
+<p>Don't miss a thing before or during Royal Vegas Online! Jot down these important dates:<br>
+October 10: All submission forms open<br>
+November 2: Discord server opens<br>
+November 3: All submission forms close<br>
+November 13: Brand launches and sales begin<br>
+November 13 - 15: Panels and activities<br>
+November 15, 2 PM PT: Tea party</p>
+<hr id="faq">
+<h4 class="section-header">FAQ</h4>
 <h4 class="section-header">What's the Theme of Royal Vegas Online?</h4>
 <p>The theme is <b>Royalty: In Your Castle</b>. We're still suffering the effects of the global pandemic, and for many of us, that means we're confined to our castles with the exception of essential work and errands. How do you make yourself feel Royal?</p>
 <p>For your fashion walk submissions and tea party coords, we encourage you to draw from the themes of royalty and nobility throughout history, and from common motifs we love in Lolita Fashion, like crowns, scepters, jewels, and thrones. Of course, our theme is just a prompt - you are not required to adhere to it at any time.</p>
@@ -89,10 +100,62 @@
 <h4 class="section-header">How do I buy a ticket to Royal Vegas Online?</h4>
 <p>RVO is free to watch and enjoy via Twitch and Discord. However, we will require a small donation to a charity to be determined or a repost of relevant information via Instagram to ensure your spot at the tea party. Stay tuned for more details as we get closer to the event.</p>
 <h4 class="section-header">How does this affect the in-person Royal Vegas Retreat event?</h4>
-<p>Tl;dr: it doesn't. We are still hoping to hold our <a href="./vegas.html">flagship in-person event Royal Vegas Retreat</a> in November 2021. However, we cannot predict the future, including the timelines for a COVID-19 vaccine. While we are cautiously optimistic that we will be able to hold our event in 2021, we cannot guarantee that the global pandemic situation will meaningfully improve by late 2021. Your safety matters to us, and we will continue to watch what is happening in the world and proceed accordingly. Thank you for your patience and for bearing with us throughout these uncertain times.</p>
-<hr>
+<p>Tl;dr: it doesn't. We are still hoping to hold our <a href="./vegas.html">flagship in-person event Royal Vegas Retreat</a> in November 2021. However, we cannot predict the future, including the timelines for a COVID-19 vaccine. While we are cautiously optimistic that we will be able to hold our event in 2021, we cannot guarantee that the global pandemic situation will meaningfully improve by late 2021. Your safety matters to us, and we will continue to watch what is happening in the world and proceed accordingly. Thank you for your patience.</p>
+<hr id ="charity">
+<h4 class="section-header">Charity Drawing</h4>
+<p>More info coming soon!</p>
+<!-- charity drawing info -->
+<hr id="forms">
+<h4 class="section-header">Forms</h4>
+<p>All submission forms open October 10 at 12 PM PT. All forms close November 3 at 12 PM PT. We will post the links here soon!</p>
+<!-- FORMS -->
+    <hr id="releases">
+<h4 class="section-header">Releases and Promotions for 11/13 - 11/15</h4>
+<div class="col-md-4 affiliate">
+<a href="https://fluffytori.com/en/">Fluffy Tori</a><br>
+<a href="https://www.ghostgirlgoods.com/">GHOST GiRL GOODS</a>
+</div>
+<div class="col-md-4 affiliate">
+<a href="https://kanekoshop.com">Kaneko</a><br>
+<a href="https://www.etsy.com/shop/KiraKiraKawaiiShoppe">Kira Kira Kawaii Shoppe</a>
+</div>
+<div class="col-md-4 affiliate">
+<a href="https://oddmonster.co/">Odd Monster</a><br>
+<a href="https://shop.prettyprincess.club">PPC Merch Shop</a>
+</div>
+<h4 class="section-header">Prize Sponsors</h4><br>
+<div class="col-md-4 affiliate">
+<a href="https://bbandb.net/">BB & B</a><br>
+<a href="https://fluffytori.com/en/">Fluffy Tori</a>
+</div>
+<div class="col-md-4 affiliate">
+<a href="https://www.ghostgirlgoods.com/">GHOST GiRL GOODS</a><br>
+<a href="https://shop.prettyprincess.club">PPC Merch Shop</a>
+</div>
+<div class="col-md-4 affiliate">
+<a href="http://www.tournewsoul.com/">Tour New Soul</a><br>
+<a href="https://twootietarte.com/">Twootie Tarte</a>
+</div>
+<h4 class="section-header affiliate">Affiliated Brands</h4>
+<div class="col-md-4 affiliate">
+<a href="https://theblackribbon.com/">The Black Ribbon</a><br>
+<a href="https://www.thedecorafactory.com/">The Decora Factory</a><br>
+<a href="https://kskawaii.com/">Kuroshiro Kawaii</a>
+</div>
+<div class="col-md-4 affiliate">
+<a href="https://www.etsy.com/shop/Lavendorium">Lavendorium</a><br>
+<a href="https://prettysour.com/">Pretty Sour</a><br>
+<a href="https://www.etsy.com/shop/starsweets">Star Sweets</a>
+</div>
+<div class="col-md-4 affiliate">
+<a href="https://www.sugarstarcafe.com/">Sugarstar Cafe</a><br>
+<a href="https://www.etsy.com/shop/SweetPastelPeach">Sweet Pastel Peach</a><br>
+<a href="http://tulutulu.xyz/">TuluTulu</a>
+</div>
+<p/>
+<hr id="substack">
     <p><iframe src="https://prettyprincessclub.substack.com/embed" width="480" height="320" style="border:1px solid #000; background:white; color: #525252;" frameborder="0" scrolling="no"></iframe></p>
-    <hr>
+    <hr id ="insta">
   <p>Follow our journey on <a href="https://instagram.com/prettyprincess.club">Instagram</a>:</p>
 <!-- SnapWidget -->
 <script src="https://snapwidget.com/js/snapwidget.js"></script>
