--- a/virtual.html
+++ b/virtual.html
@@ -81,33 +81,29 @@
 <p>Presented by Pretty Princess Club and JFashion On Demand<br>with Discord support by Bay Area Kei</p> 
 <hr id ="schedule">
 <h4 class="section-header">Event Timeline and Schedule</h4>
-<p>Don't miss a thing before or during Royal Vegas Online! Jot down these important dates:<br>
-October 10: All submission forms open<br>
+<p>October 10: Submission forms open for tea party, pub trivia, fashion walk and coord contest, and charity drawing.<br>
 November 2: Discord server opens<br>
-November 3: All submission forms close<br>
+November 3: Submission forms close for tea party, pub trivia, and fashion walk and coord contest.<br>
 November 13: Brand launches and sales begin<br>
 November 13 - 15: Panels and activities<br>
-November 15, 2 PM PT: Tea party</p>
-<hr id="faq">
-<h4 class="section-header">FAQ</h4>
-<h4 class="section-header">What's the Theme of Royal Vegas Online?</h4>
-<p>The theme is <b>Royalty: In Your Castle</b>. We're still suffering the effects of the global pandemic, and for many of us, that means we're confined to our castles with the exception of essential work and errands. How do you make yourself feel Royal?</p>
-<p>For your fashion walk submissions and tea party coords, we encourage you to draw from the themes of royalty and nobility throughout history, and from common motifs we love in Lolita Fashion, like crowns, scepters, jewels, and thrones. Of course, our theme is just a prompt - you are not required to adhere to it at any time.</p>
-<p>We will also post inspiring Instagram prompts starting in November. How do you make your castle inviting, cozy, and aesthetic, and what do you wear to make you feel your best? Have you perfected the perfect afternoon tea to eat at home, before, during, or after a virtual tea party? We want to know - and we'll be sharing a selection of submissions.</p>
-<h4 class="section-header">How do I sign up?</h4>
-<p>You can join our <a href="https://www.facebook.com/events/366689871353932/">Facebook event</a>.</p>
-<p>For the <b>Fashion Walk, Coord Contest, Pub Trivia, and Tea Party</b>, you will need to sign up via our intake forms. <b>All forms open October 10 and close November 3</b>, so please mark your calendars now! We will post the forms here and on social media when they are avaiable.</p>
-<h4 class="section-header">How do I buy a ticket to Royal Vegas Online?</h4>
-<p>RVO is free to watch and enjoy via Twitch and Discord. However, we will require a small donation to a charity to be determined or a repost of relevant information via Instagram to ensure your spot at the tea party. Stay tuned for more details as we get closer to the event.</p>
-<h4 class="section-header">How does this affect the in-person Royal Vegas Retreat event?</h4>
-<p>Tl;dr: it doesn't. We are still hoping to hold our <a href="./vegas.html">flagship in-person event Royal Vegas Retreat</a> in November 2021. However, we cannot predict the future, including the timelines for a COVID-19 vaccine. While we are cautiously optimistic that we will be able to hold our event in 2021, we cannot guarantee that the global pandemic situation will meaningfully improve by late 2021. Your safety matters to us, and we will continue to watch what is happening in the world and proceed accordingly. Thank you for your patience.</p>
+November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
 <hr id ="charity">
 <h4 class="section-header">Charity Drawing</h4>
-<p>More info coming soon!</p>
+<p>We will hold a charity drawing to benefit the <a href="https://eji.org/">Equal Justice Initiative</a>. We will announce the winners at the Royal Vegas Online closing ceremonies. You must submit your entries by November 15 at 2:00 PM PT.</p>
+<p>No monetary purchase is necessary to enter or win the drawing. Please note that the drawing is only open to United States residents. It is not open to residents of Alabama, Hawaii, Kansas, New Jersey, and Utah, in compliance with applicable state laws.</p>
+<p>You can enter our drawing by 1. Registering for the Tea Party or Tea Party waitlist, 2. Submitting proof of donation of $5 or more to the <a href="https://eji.org/">Equal Justice Initiative</a>, or 3. reposting our informational Instagram post (<a href="./charity.html">see this page for more information</a>). Limit one entry per person.</p>
+<p>We will choose winners by random drawing, and each winner will receive one of the following: a $125 gift card from <a href="https://bbandb.net/">BB & B</a>, a <a href="https://fluffytori.com/en/">Fluffy Tori</a> bundle (pin of your choice, sticker sheet, coord planner notepad), a prize from <a href="https://twootietarte.com/">Twootie Tarte</a> to be announced, or a <a href="https://shop.prettyprincess.club">PPC Merch Shop</a> swag bundle.</p>
 <!-- charity drawing info -->
+<hr id ="fashion">
+<h4 class="section-header">Fashion Walk and Coord Contest</h4>
+<p>Submissions for our Fashion Walk and Coord Contest open on October 10 and close on November 3. To apply to the Coord Contest, simply opt in on the Fashion Walk submission form. Please submit only one entry to the Coord Contest. You may submit up to 2 entries for the Fashion Walk. While we encourage you to get inspired by our theme "Royalty: In Your Castle," you are not required to adhere to it.</p>
+<p>Coords should fit into the genre of Lolita fashion, Ouji fashion, EGA, or a fusion of Lolita and another J-Fashion.</p>
+<p>In addition: You MUST be 18 years or older to participate. Outfits should not be sexually explicit. NO cosplay or costumes, and NO replicas.</p>
+<p>We will award a prize to the 2 Coord Contest winners determined by popular vote and by a panel of judges consisting of the JFashion On Demand team and Nif from Pretty Princess Club. Deadline for votes is November 15 at 2:00 PM PT. We can't wait to see your wonderful entries!</p>
+<p>The winner of the Popular Vote Prize will receive a <a href="https://fluffytori.com/en/">Fluffy Tori</a> bundle (pin of your choice, sticker sheet, coord planner notepad), a gift card from <a href="https://www.ghostgirlgoods.com/">GHOST GiRL GOODS</a>, and a <a href="https://shop.prettyprincess.club">PPC Merch Shop</a> swag bundle. The winner of the Judges' Panel Prize will receive a a <a href="https://fluffytori.com/en/">Fluffy Tori</a> bundle (pin of your choice, sticker sheet, coord planner notepad), a promo code from <a href="http://www.tournewsoul.com/">Tour New Soul</a>, and a <a href="https://shop.prettyprincess.club">PPC Merch Shop</a> swag bundle.</p>
 <hr id="forms">
 <h4 class="section-header">Forms</h4>
-<p>All submission forms open October 10 at 12 PM PT. All forms close November 3 at 12 PM PT. We will post the links here soon!</p>
+<p>All submission forms open October 10 at 12 PM PT. All forms except those for the charity drawing close November 3 at 12 PM PT. We will post the links to all forms here before they go live.</p>
 <!-- FORMS -->
     <hr id="releases">
 <h4 class="section-header">Releases and Promotions for 11/13 - 11/15</h4>
@@ -153,8 +149,21 @@ November 15, 2 PM PT: Tea party</p>
 <a href="http://tulutulu.xyz/">TuluTulu</a>
 </div>
 <p/>
+<hr id="faq">
+<h4 class="section-header">FAQ</h4>
+<h4 class="section-header">What's the Theme of Royal Vegas Online?</h4>
+<p>The theme is <b>Royalty: In Your Castle</b>. We're still suffering the effects of the global pandemic, and for many of us, that means we're confined to our castles with the exception of essential work and errands. How do you make yourself feel Royal? For your fashion walk/coord contest submissions and tea party coords, we encourage you to draw from the themes of royalty and nobility throughout history, and from common motifs we love in Lolita Fashion, like crowns, scepters, jewels, and thrones. Of course, our theme is just a prompt - you are not required to adhere to it at any time.</p>
+<p>We will also post inspiring Instagram prompts starting in November. How do you make your castle inviting, cozy, and aesthetic, and what do you wear to make you feel your best? Have you perfected the perfect afternoon tea to eat at home, before, during, or after a virtual tea party? We want to know - and we'll be sharing a random selection of submissions.</p>
+<h4 class="section-header">How do I sign up?</h4>
+<p>You can join our <a href="https://www.facebook.com/events/366689871353932/">Facebook event</a>.</p>
+<p>For the <b>Fashion Walk, Coord Contest, Pub Trivia, and Tea Party</b>, you will need to sign up via our intake forms. <b>All forms open October 10 and close November 3</b>, so please mark your calendars now! We will post the forms here and on social media when they are avaiable.</p>
+<h4 class="section-header">How do I buy a ticket to Royal Vegas Online?</h4>
+<p>RVO is free to watch and enjoy via Twitch and Discord. However, we will require a small donation to a charity to ensure your spot at the tea party.</p>
+<h4 class="section-header">How does this affect the in-person Royal Vegas Retreat event?</h4>
+<p>Tl;dr: it doesn't. We are still hoping to hold our <a href="./vegas.html">flagship in-person event Royal Vegas Retreat</a> in November 2021.</p>
+
 <hr id="substack">
-    <p><iframe src="https://prettyprincessclub.substack.com/embed" width="480" height="320" style="border:1px solid #000; background:white; color: #525252;" frameborder="0" scrolling="no"></iframe></p>
+    <p>To get the latest info about Royal Vegas Online before it hits social media, <a href="https://prettyprincessclub.substack.com">subscribe to our Substack list!</a> We promise not to spam you, and you can unsubscribe at any time.</p>
     <hr id ="insta">
   <p>Follow our journey on <a href="https://instagram.com/prettyprincess.club">Instagram</a>:</p>
 <!-- SnapWidget -->
