--- a/virtual.html
+++ b/virtual.html
@@ -103,8 +103,15 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
 <p>The winner of the Popular Vote Prize will receive a <a href="https://fluffytori.com/en/">Fluffy Tori</a> bundle (pin of your choice, sticker sheet, coord planner notepad), a gift card from <a href="https://www.ghostgirlgoods.com/">GHOST GiRL GOODS</a>, and a <a href="https://shop.prettyprincess.club">PPC Merch Shop</a> swag bundle. The winner of the Judges' Panel Prize will receive a a <a href="https://fluffytori.com/en/">Fluffy Tori</a> bundle (pin of your choice, sticker sheet, coord planner notepad), a promo code from <a href="http://www.tournewsoul.com/">Tour New Soul</a>, and a <a href="https://shop.prettyprincess.club">PPC Merch Shop</a> swag bundle.</p>
 <hr id="forms">
 <h4 class="section-header">Forms</h4>
-<p>All submission forms open October 10 at 12 PM PT. All forms except those for the charity drawing close November 3 at 12 PM PT. We will post the links to all forms here before they go live.</p>
-<!-- FORMS -->
+<p>All submission forms open October 10 at 12 PM PT. All forms except those for the charity drawing close November 3 at 12 PM PT. Charity drawing entries close November 15 at 2:00 PM PT.</p>
+<p>Forms will not accept submissions prior to October 10. If either the pub trivia or tea party forms are not accepting responses, we hae reached capacity for that event. Please fill out the corresponding waitlist instead.<br>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSd8EQ_dT6Nnpt5UU-GfPvAZVqlQZ8tf8v62EVyssX1Tlv4Pvw/viewform?usp=sf_link">Pub Trivia Team Signup Form (for groups of 2-6)</a><br>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLScRfnGKxAtDuY5hxqnW4-B9dCmDSNlw_JyjbVhTTLEcVOCNlw/viewform?usp=sf_link">Pub Trivia Free Agent Signup Form (for individuals without a team)</a><br>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLScqGsaWaQ5JJcpSyHF-6qHr49FFZrIjGo8ET1SLdYuecnYx9w/viewform?usp=sf_link">Pub Trivia Team WAITLIST Form (for groups of 2-6)</a><br>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLScqlBe3_CAhbomHmAdMKeAmF4l71AUMkssj2I3tekWzuwNdRA/viewform?usp=sf_link">Pub Trivia Free Agent WAITLIST Form (for individuals without a team)</a><br>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSegJWbCFaJIGB1JKQ0dsPgkaYpRVEqMmtsP7p-vMM7cqU0uxw/viewform?usp=sf_link">Tea Party Signup Form</a><br>
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfhJIgTvXIHOumVCmxCimvUBfPzNKUhOTdBZo4ErC_6CMJ-Hg/viewform?usp=sf_link">Tea Party WAITLIST Form</a><br>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSelQtr80LO8NJGtB74qF2Z60bEgl-2pYJLr6rTq7D7qGTLVVQ/viewform?usp=sf_link">Charity drawing entry form</a></p>
     <hr id="releases">
 <h4 class="section-header">Releases and Promotions for 11/13 - 11/15</h4>
 <div class="col-md-4 affiliate">
