Refactor sections into virtual event sub pages

--- a/virtual.html
+++ b/virtual.html
@@ -29,7 +29,24 @@
           </div>
           <nav class="topnav" id="myTopnav">
             <ul>
-            <li> <a href="./virtual.html" class="active">Royal Vegas Online</a></li>
+            <li>
+              <button class="btnList" onclick="openList('2')">
+              <span class="drop">Royal Vegas Online</span>
+              <span class="acc">Royal Vegas Online</span>
+            </button>
+            <div class="content_list left" id="thisList_2">
+              <p class="sub-menu">
+               <a href="./virtual.html" >RVO Home</a></br>
+              <a href="./virtual/rvo-faq.html">Event FAQ</a></br>
+              <a href="./virtual/schedule.html">Programming and Schedule</a></br>
+              <a href="./virtual/tea.html">Virtual Tea Party</a></br>
+              <a href="./virtual/trivia.html">Virtual Pub Trivia</a></br>
+              <a href="./virtual/charity.html">Charity Drawing</a></br>
+              <a href="./virtual/contest.html">Fashion Walk and Coord Contest</a>
+            </p>
+            </div>
+        </li>
+
 
             <li>
               <button class="btnList" onclick="openList('1')">
@@ -87,31 +104,19 @@ November 3: Submission forms close for tea party, pub trivia, and fashion walk a
 November 13: Brand launches and sales begin<br>
 November 13 - 15: Panels and activities<br>
 November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
-<hr id ="charity">
-<h4 class="section-header">Charity Drawing</h4>
-<p>We will hold a charity drawing to benefit the <a href="https://eji.org/">Equal Justice Initiative</a>. We will announce the winners at the Royal Vegas Online closing ceremonies. You must submit your entries by November 15 at 2:00 PM PT.</p>
-<p>No monetary purchase is necessary to enter or win the drawing. Please note that the drawing is only open to United States residents. It is not open to residents of Alabama, Hawaii, Kansas, New Jersey, and Utah, in compliance with applicable state laws.</p>
-<p>You can enter our drawing by 1. Registering for the Tea Party or Tea Party waitlist, 2. Submitting proof of donation of $5 or more to the <a href="https://eji.org/">Equal Justice Initiative</a>, or 3. reposting our informational Instagram post (<a href="./charity.html">see this page for more information</a>). Limit one entry per person.</p>
-<p>We will choose winners by random drawing, and each winner will receive one of the following: a $125 gift card from <a href="https://bbandb.net/">BB & B</a>, a <a href="https://fluffytori.com/en/">Fluffy Tori</a> bundle (pin of your choice, sticker sheet, coord planner notepad), a prize from <a href="https://twootietarte.com/">Twootie Tarte</a> to be announced, or a <a href="https://shop.prettyprincess.club">PPC Merch Shop</a> swag bundle.</p>
-<!-- charity drawing info -->
-<hr id ="fashion">
-<h4 class="section-header">Fashion Walk and Coord Contest</h4>
-<p>Submissions for our Fashion Walk and Coord Contest open on October 10 and close on November 3. To apply to the Coord Contest, simply opt in on the Fashion Walk submission form. Please submit only one entry to the Coord Contest. You may submit up to 2 entries for the Fashion Walk. While we encourage you to get inspired by our theme "Royalty: In Your Castle," you are not required to adhere to it.</p>
-<p>Coords should fit into the genre of Lolita fashion, Ouji fashion, EGA, or a fusion of Lolita and another J-Fashion.</p>
-<p>In addition: You MUST be 18 years or older to participate. Outfits should not be sexually explicit. NO cosplay or costumes, and NO replicas.</p>
-<p>We will award a prize to the 2 Coord Contest winners determined by popular vote and by a panel of judges consisting of the JFashion On Demand team and Nif from Pretty Princess Club. Deadline for votes is November 15 at 2:00 PM PT. We can't wait to see your wonderful entries!</p>
-<p>The winner of the Popular Vote Prize will receive a <a href="https://fluffytori.com/en/">Fluffy Tori</a> bundle (pin of your choice, sticker sheet, coord planner notepad), a gift card from <a href="https://www.ghostgirlgoods.com/">GHOST GiRL GOODS</a>, and a <a href="https://shop.prettyprincess.club">PPC Merch Shop</a> swag bundle. The winner of the Judges' Panel Prize will receive a a <a href="https://fluffytori.com/en/">Fluffy Tori</a> bundle (pin of your choice, sticker sheet, coord planner notepad), a promo code from <a href="http://www.tournewsoul.com/">Tour New Soul</a>, and a <a href="https://shop.prettyprincess.club">PPC Merch Shop</a> swag bundle.</p>
+
 <hr id="forms">
 <h4 class="section-header">Forms</h4>
 <p>All submission forms open October 10 at 12 PM PT. All forms except those for the charity drawing close November 3 at 12 PM PT. Charity drawing entries close November 15 at 2:00 PM PT.</p>
-<p>Forms will not accept submissions prior to October 10. If either the pub trivia or tea party forms are not accepting responses, we hae reached capacity for that event. Please fill out the corresponding waitlist instead.<br>
+<p>Forms will not accept submissions prior to October 10. If either the pub trivia or tea party forms are not accepting responses, we have reached capacity for that event. Please fill out the corresponding waitlist instead.<br>
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSd8EQ_dT6Nnpt5UU-GfPvAZVqlQZ8tf8v62EVyssX1Tlv4Pvw/viewform?usp=sf_link">Pub Trivia Team Signup Form (for groups of 2-6)</a><br>
   <a href="https://docs.google.com/forms/d/e/1FAIpQLScRfnGKxAtDuY5hxqnW4-B9dCmDSNlw_JyjbVhTTLEcVOCNlw/viewform?usp=sf_link">Pub Trivia Free Agent Signup Form (for individuals without a team)</a><br>
   <a href="https://docs.google.com/forms/d/e/1FAIpQLScqGsaWaQ5JJcpSyHF-6qHr49FFZrIjGo8ET1SLdYuecnYx9w/viewform?usp=sf_link">Pub Trivia Team WAITLIST Form (for groups of 2-6)</a><br>
   <a href="https://docs.google.com/forms/d/e/1FAIpQLScqlBe3_CAhbomHmAdMKeAmF4l71AUMkssj2I3tekWzuwNdRA/viewform?usp=sf_link">Pub Trivia Free Agent WAITLIST Form (for individuals without a team)</a><br>
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSegJWbCFaJIGB1JKQ0dsPgkaYpRVEqMmtsP7p-vMM7cqU0uxw/viewform?usp=sf_link">Tea Party Signup Form</a><br>
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSfhJIgTvXIHOumVCmxCimvUBfPzNKUhOTdBZo4ErC_6CMJ-Hg/viewform?usp=sf_link">Tea Party WAITLIST Form</a><br>
-<a href="https://docs.google.com/forms/d/e/1FAIpQLSelQtr80LO8NJGtB74qF2Z60bEgl-2pYJLr6rTq7D7qGTLVVQ/viewform?usp=sf_link">Charity drawing entry form</a></p>
+<a href="https://docs.google.com/forms/d/e/1FAIpQLSelQtr80LO8NJGtB74qF2Z60bEgl-2pYJLr6rTq7D7qGTLVVQ/viewform?usp=sf_link">Charity drawing entry form</a><br>
+<a href="https://forms.gle/ZvmHNYP2XrDamQxh8">Fashion Walk and Coord Contest entry form</a></p>
     <hr id="releases">
 <h4 class="section-header">Releases and Promotions for 11/13 - 11/15</h4>
 <div class="col-md-4 affiliate">
@@ -156,18 +161,6 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
 <a href="http://tulutulu.xyz/">TuluTulu</a>
 </div>
 <p/>
-<hr id="faq">
-<h4 class="section-header">FAQ</h4>
-<h4 class="section-header">What's the Theme of Royal Vegas Online?</h4>
-<p>The theme is <b>Royalty: In Your Castle</b>. We're still suffering the effects of the global pandemic, and for many of us, that means we're confined to our castles with the exception of essential work and errands. How do you make yourself feel Royal? For your fashion walk/coord contest submissions and tea party coords, we encourage you to draw from the themes of royalty and nobility throughout history, and from common motifs we love in Lolita Fashion, like crowns, scepters, jewels, and thrones. Of course, our theme is just a prompt - you are not required to adhere to it at any time.</p>
-<p>We will also post inspiring Instagram prompts starting in November. How do you make your castle inviting, cozy, and aesthetic, and what do you wear to make you feel your best? Have you perfected the perfect afternoon tea to eat at home, before, during, or after a virtual tea party? We want to know - and we'll be sharing a random selection of submissions.</p>
-<h4 class="section-header">How do I sign up?</h4>
-<p>You can join our <a href="https://www.facebook.com/events/366689871353932/">Facebook event</a>.</p>
-<p>For the <b>Fashion Walk, Coord Contest, Pub Trivia, and Tea Party</b>, you will need to sign up via our intake forms. <b>All forms open October 10 and close November 3</b>, so please mark your calendars now! We will post the forms here and on social media when they are avaiable.</p>
-<h4 class="section-header">How do I buy a ticket to Royal Vegas Online?</h4>
-<p>RVO is free to watch and enjoy via Twitch and Discord. However, we will require a small donation to a charity to ensure your spot at the tea party.</p>
-<h4 class="section-header">How does this affect the in-person Royal Vegas Retreat event?</h4>
-<p>Tl;dr: it doesn't. We are still hoping to hold our <a href="./vegas.html">flagship in-person event Royal Vegas Retreat</a> in November 2021.</p>
 
 <hr id="substack">
     <p>To get the latest info about Royal Vegas Online before it hits social media, <a href="https://prettyprincessclub.substack.com">subscribe to our Substack list!</a> We promise not to spam you, and you can unsubscribe at any time.</p>
