--- a/virtual/schedule.html
+++ b/virtual/schedule.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6ec6ff">
 <meta name="msapplication-TileColor" content="#bde5ff">
@@ -10,17 +10,17 @@
   <!-- add links to custom fonts -->
     <link href="https://fonts.googleapis.com/css?family=Gabriela" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/waves.css">
-    <link rel="stylesheet" href="./css/animate.css">
-    <link rel="stylesheet" href="./css/responsive-nav.css">
-    <link rel="stylesheet" href="./css/rvo-page.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/waves.css">
+    <link rel="stylesheet" href="../css/animate.css">
+    <link rel="stylesheet" href="../css/responsive-nav.css">
+    <link rel="stylesheet" href="../css/rvo-page.css">
 
   <header class="main_h sticky">
 
       <div class="row nav-row" id="sticky_nav">
           <a class="logo-link" href="#">
-<img src="./PrincessClockLogo-04.svg" class="logo logo-img" alt="Pretty Princess Club logo">
+<img src="../PrincessClockLogo-04.svg" class="logo logo-img" alt="Pretty Princess Club logo">
 </a>
           <div class="mobile-toggle">
               <span></span>
@@ -29,7 +29,23 @@
           </div>
           <nav class="topnav" id="myTopnav">
             <ul>
-            <li> <a href="./virtual.html" class="active">Royal Vegas Online</a></li>
+            <li>
+              <button class="btnList" onclick="openList('2')">
+              <span class="drop">Royal Vegas Online</span>
+              <span class="acc">Royal Vegas Online</span>
+            </button>
+            <div class="content_list left" id="thisList_2">
+              <p class="sub-menu">
+               <a href="../virtual.html" >RVO Home</a></br>
+              <a href="../virtual/rvo-faq.html">Event FAQ</a></br>
+              <a href="../virtual/schedule.html">Programming and Schedule</a></br>
+              <a href="../virtual/tea.html">Virtual Tea Party</a></br>
+              <a href="../virtual/trivia.html">Virtual Pub Trivia</a></br>
+              <a href="../virtual/charity.html">Charity Drawing</a></br>
+              <a href="../virtual/contest.html">Fashion Walk and Coord Contest</a>
+            </p>
+            </div>
+        </li>
 
             <li>
               <button class="btnList" onclick="openList('1')">
@@ -38,20 +54,20 @@
             </button>
             <div class="content_list left" id="thisList_1">
               <p class="sub-menu">
-               <a href="./vegas.html" >RVR Home</a></br>
-              <a href="./event/event-faq.html">Event FAQ</a></br>
-              <a href="./event/programming.html">Programming and Schedule</a></br>
-              <a href="./event/reg.html">Registration</a></br>
-              <a href="./event/venue.html">Room Block and Venue</a></br>
-              <a href="./event/special-guests.html">Special Guests</a></br>
-              <a href="./event/tourists.html">Tourists</a></br>
-              <a href="./event/vendors.html">Vendors</a></br>
-              <a href="./event/volunteers.html">Volunteers</a>
+               <a href="../vegas.html" >RVR Home</a></br>
+              <a href="../event/event-faq.html">Event FAQ</a></br>
+              <a href="../event/programming.html">Programming and Schedule</a></br>
+              <a href="../event/reg.html">Registration</a></br>
+              <a href="../event/venue.html">Room Block and Venue</a></br>
+              <a href="../event/special-guests.html">Special Guests</a></br>
+              <a href="../event/tourists.html">Tourists</a></br>
+              <a href="../event/vendors.html">Vendors</a></br>
+              <a href="../event/volunteers.html">Volunteers</a>
             </p>
             </div>
         </li>
-            <li>   <a href="./about.html">About PPC</a></li>
-            <li>   <a href="./contact.html" >Contact Us</a></li>
+            <li>   <a href="../about.html">About PPC</a></li>
+            <li>   <a href="../contact.html" >Contact Us</a></li>
             <li>   <a href="https://prettyprincessclub.substack.com/" >Blog</a></li>
             <li>   <a href="https://shop.prettyprincess.club" >Shop</a></li>
           </ul>
@@ -76,22 +92,8 @@
 </div>
   <center>
 <div class="row content">
-<h4 class="section-header">How to Enter the RVO Giveaway Using Instagram</h4>
-<p>You must follow <a href="https://instagram.com/prettyprincess.club">@prettyprincess.club on Instagram</a>. Repost our image describing ways to fight racial injustice (<a href="./images/rvo-repost.png">here</a>, or see our <a href="./images/rvo-repost-df.png">dyslexia-friendly font version</a>) and include the following text in the caption:</p>
-<p>This post is aimed at people who want to fight racial injustice in their communities but don't know how to start. Image provided by @prettyprincess.club<br>
-* Get involved in local politics: Is your city council voting to defund the police or fund community 
-aid efforts? Find the city councilmember for your district and call, email,
-or snail-mail them to encourage them to pledge their support.<br>
-* Donate Money: To organizations like the Equal Justice Initiative or directly to people 
-affected by injustice.<br>
-* Donate Goods: Your local mutual aid organization might have a list of specific goods
-they need to support their community. Check their current needs, mask 
-up, and go shopping!<br>
-* Educate Your Friends and Family: Find ways to discuss your role in combating racial injustice with your 
-people every day.<br>
-#RVOGiveaway</p>
-<hr>
-<p>You must leave your post up until the drawing is finished. Once posted, you must <a href="https://forms.gle/MQx6SHSDU2x6VoFK8">fill out our entry form</a> between October 10 and November 15. Submissions close Sunday, November 15 at 2:00 PM PT.</p>
+<h4 class="section-header">Coming Soon!</h4>
+<p>We are hard at work planning our Royal Vegas Online content schedule. Please check back soon for more information.</p>
 
 <hr id="substack">
     <p>To get the latest info about Royal Vegas Online before it hits social media, <a href="https://prettyprincessclub.substack.com">subscribe to our Substack list!</a> We promise not to spam you, and you can unsubscribe at any time.</p>
@@ -102,10 +104,10 @@ people every day.<br>
 <iframe src="https://snapwidget.com/embed/875015" class="snapwidget-widget" allowtransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden;  width:100%; "></iframe>
 </div>
 </center>
-<script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="./js/popper.min.js"></script>
-<script type="text/javascript" src="./js/bootstrap.min.js"></script>
-<script type="text/javascript" src="./js/mdb.min.js"></script>
+<script type="text/javascript" src="../js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="../js/popper.min.js"></script>
+<script type="text/javascript" src="../js/bootstrap.min.js"></script>
+<script type="text/javascript" src="../js/mdb.min.js"></script>
 
 <div class="footer">
   <p class="copyright">© 2019 - 2020 Pretty Princess Club, LLC</p>
