--- a/virtual/charity.html
+++ b/virtual/charity.html
@@ -100,7 +100,7 @@
 <p>Enter by filling out the <a href="https://docs.google.com/forms/d/e/1FAIpQLSelQtr80LO8NJGtB74qF2Z60bEgl-2pYJLr6rTq7D7qGTLVVQ/viewform?usp=sf_link">charity drawing entry form</a> starting October 10. Please do not fill out this form if you have registered for the Tea Party or Tea Party waitlist.</p>
 <hr>
 <h4 class="section-header">How to Enter the RVO Giveaway Using Instagram</h4>
-<p>You must follow <a href="https://instagram.com/prettyprincess.club">@prettyprincess.club on Instagram</a>. Repost our image describing ways to fight racial injustice (<a href="./images/rvo-repost.png">here</a>, or see our <a href="./images/rvo-repost-df.png">dyslexia-friendly font version</a>) and include the following text in the caption:</p>
+<p>You must follow <a href="https://instagram.com/prettyprincess.club">@prettyprincess.club on Instagram</a>. Repost our image describing ways to fight racial injustice (<a href="../images/rvo-repost.png">here</a>, or see our <a href="../images/rvo-repost-df.png">dyslexia-friendly font version</a>) and include the following text in the caption:</p>
 <p>This post is aimed at people who want to fight racial injustice in their communities but don't know how to start. Image provided by @prettyprincess.club<br>
 * Get involved in local politics: Is your city council voting to defund the police or fund community 
 aid efforts? Find the city councilmember for your district and call, email,
