--- a/virtual.html
+++ b/virtual.html
@@ -96,6 +96,12 @@
   <h4 class="section-header">November 13 - 15, 2020<br>Via Twitch and Discord</h4>
 
 <p>Presented by Pretty Princess Club and JFashion On Demand<br>with Discord support by Bay Area Kei</p> 
+<p>
+  <a href="./virtual/rvo-faq.html">FAQ</a> ♥ <a href="./virtual/schedule.html">Programming and Schedule</a> ♥
+              <a href="./virtual/charity.html">Charity Drawing</a> ♥ <br>
+              ♥ <a href="./virtual/contest.html">Fashion Walk and Coord Contest</a> ♥
+              <a href="./virtual/tea.html">Tea Party</a> ♥ 
+               <a href="./virtual/trivia.html">Pub Trivia</a> ♥ </p>
 <hr id ="schedule">
 <h4 class="section-header">Event Timeline and Schedule</h4>
 <p>October 10: Submission forms open for tea party, pub trivia, fashion walk and coord contest, and charity drawing.<br>
