Add Puvithel, Kaet, BAK to affiliates

--- a/virtual.html
+++ b/virtual.html
@@ -150,18 +150,21 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
 <a href="http://www.tournewsoul.com/">Tour New Soul</a><br>
 <a href="https://twootietarte.com/">Twootie Tarte</a>
 </div>
-<h4 class="section-header affiliate">Affiliated Brands</h4>
+<h4 class="section-header affiliate">Affiliated Brands and Friends of RVO</h4>
 <div class="col-md-4 affiliate">
+  <a href="https://www.bayareakei.org/">Bay Area Kei</a><br>
 <a href="https://theblackribbon.com/">The Black Ribbon</a><br>
 <a href="https://www.thedecorafactory.com/">The Decora Factory</a><br>
-<a href="https://kskawaii.com/">Kuroshiro Kawaii</a>
+<a href="https://kaetia.artstation.com/">Kaet</a>
 </div>
 <div class="col-md-4 affiliate">
+  <a href="https://kskawaii.com/">Kuroshiro Kawaii</a><br>
 <a href="https://www.etsy.com/shop/Lavendorium">Lavendorium</a><br>
 <a href="https://prettysour.com/">Pretty Sour</a><br>
-<a href="https://www.etsy.com/shop/starsweets">Star Sweets</a>
+<a href="https://www.puvithel.com/">Puvithel</a>
 </div>
 <div class="col-md-4 affiliate">
+  <a href="https://www.etsy.com/shop/starsweets">Star Sweets</a><br>
 <a href="https://www.sugarstarcafe.com/">Sugarstar Cafe</a><br>
 <a href="https://www.etsy.com/shop/SweetPastelPeach">Sweet Pastel Peach</a><br>
 <a href="http://tulutulu.xyz/">TuluTulu</a>
