--- a/virtual.html
+++ b/virtual.html
@@ -97,7 +97,7 @@
 
 <p>Presented by Pretty Princess Club and JFashion On Demand<br>with Discord support by Bay Area Kei</p> 
 <p>
-  <a href="./virtual/rvo-faq.html">FAQ</a> ♥ <a href="./virtual/schedule.html">Programming and Schedule</a> ♥
+  ♥ <a href="./virtual/rvo-faq.html">FAQ</a> ♥ <a href="./virtual/schedule.html">Programming and Schedule</a> ♥
               <a href="./virtual/charity.html">Charity Drawing</a> ♥ <br>
               ♥ <a href="./virtual/contest.html">Fashion Walk and Coord Contest</a> ♥
               <a href="./virtual/tea.html">Tea Party</a> ♥ 
