Amend KaetShop info

--- a/virtual.html
+++ b/virtual.html
@@ -155,7 +155,7 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
   <a href="https://www.bayareakei.org/">Bay Area Kei</a><br>
 <a href="https://theblackribbon.com/">The Black Ribbon</a><br>
 <a href="https://www.thedecorafactory.com/">The Decora Factory</a><br>
-<a href="https://kaetia.artstation.com/">Kaet</a>
+<a href="https://kaetia.carrd.co/#ppcvirtualtable">KaetShop</a>
 </div>
 <div class="col-md-4 affiliate">
   <a href="https://kskawaii.com/">Kuroshiro Kawaii</a><br>
