--- a/virtual.html
+++ b/virtual.html
@@ -123,6 +123,16 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSfhJIgTvXIHOumVCmxCimvUBfPzNKUhOTdBZo4ErC_6CMJ-Hg/viewform?usp=sf_link">Tea Party WAITLIST Form</a><br>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSelQtr80LO8NJGtB74qF2Z60bEgl-2pYJLr6rTq7D7qGTLVVQ/viewform?usp=sf_link">Charity drawing entry form</a><br>
 <a href="https://forms.gle/ZvmHNYP2XrDamQxh8">Fashion Walk and Coord Contest entry form</a></p>
+<hr id="playlist">
+<h4 class="section-header">Event Playlist</h4>
+<div class="col-md-6">
+<p><iframe src="https://open.spotify.com/embed/playlist/5Kd2qjzWGStcRkNIdfUTAf" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></p></div>
+<div class="col-md-6">
+  <p>Enjoy our aesthetic playlist, courtesy of <a href="https://www.instagram.com/mintypile/">Mindy!</a> Turn up, wind down, and feel like Royalty. It's your castle.</p></div>
+
+<hr id="cocktail">
+<h4 class="section-header">Signature Event Cocktail</h4>
+<p>The Vegas Royal-Tea Cocktail is a vacation in a glass! See our recipe on <a href="https://prettyprincessclub.substack.com/p/make-the-rvo-signature-cocktail?r=2jjnh&utm_campaign=post&utm_medium=web&utm_source=copy">Substack</a>, then head to our <a href="https://shop.prettyprincess.club">official merch store</a> to pick up your pouch of Vegas Royal-Tea.</p>
     <hr id="releases">
 <h4 class="section-header">Releases and Promotions for 11/13 - 11/15</h4>
 <div class="col-md-4 affiliate">
