Add Tour New Soul and Puvithel to releases and promos

--- a/virtual.html
+++ b/virtual.html
@@ -137,15 +137,17 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
 <h4 class="section-header">Releases and Promotions for 11/13 - 11/15</h4>
 <div class="col-md-4 affiliate">
 <a href="https://fluffytori.com/en/">Fluffy Tori</a><br>
-<a href="https://www.ghostgirlgoods.com/">GHOST GiRL GOODS</a>
+<a href="https://www.ghostgirlgoods.com/">GHOST GiRL GOODS</a><br>
+<a href="https://kanekoshop.com">Kaneko</a>
 </div>
 <div class="col-md-4 affiliate">
-<a href="https://kanekoshop.com">Kaneko</a><br>
-<a href="https://www.etsy.com/shop/KiraKiraKawaiiShoppe">Kira Kira Kawaii Shoppe</a>
+<a href="https://www.etsy.com/shop/KiraKiraKawaiiShoppe">Kira Kira Kawaii Shoppe</a><br>
+<a href="https://oddmonster.co/">Odd Monster</a>
 </div>
 <div class="col-md-4 affiliate">
-<a href="https://oddmonster.co/">Odd Monster</a><br>
-<a href="https://shop.prettyprincess.club">PPC Merch Shop</a>
+  <a href="https://shop.prettyprincess.club">PPC Merch Shop</a><br>
+<a href="https://www.puvithel.com/">Puvithel</a><br>
+<a href="http://www.tournewsoul.com/">Tour New Soul</a>
 </div>
 <h4 class="section-header">Prize Sponsors</h4><br>
 <div class="col-md-4 affiliate">
@@ -170,8 +172,7 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
 <div class="col-md-4 affiliate">
   <a href="https://kskawaii.com/">Kuroshiro Kawaii</a><br>
 <a href="https://www.etsy.com/shop/Lavendorium">Lavendorium</a><br>
-<a href="https://prettysour.com/">Pretty Sour</a><br>
-<a href="https://www.puvithel.com/">Puvithel</a>
+<a href="https://prettysour.com/">Pretty Sour</a>
 </div>
 <div class="col-md-4 affiliate">
   <a href="https://www.etsy.com/shop/starsweets">Star Sweets</a><br>
