Flip mini-menu, correct more dates

--- a/virtual.html
+++ b/virtual.html
@@ -97,16 +97,17 @@
 
 <p>Presented by Pretty Princess Club and JFashion On Demand<br>with Discord support by Bay Area Kei</p> 
 <p>
-  ♥ <a href="./virtual/rvo-faq.html">FAQ</a> ♥ <a href="./virtual/schedule.html">Programming and Schedule</a> ♥
-              <a href="./virtual/charity.html">Charity Drawing</a> ♥ <br>
-              ♥ <a href="./virtual/contest.html">Fashion Walk and Coord Contest</a> ♥
+  ♥ <a href="./virtual/contest.html">Fashion Walk and Coord Contest</a> ♥
               <a href="./virtual/tea.html">Tea Party</a> ♥ 
-               <a href="./virtual/trivia.html">Pub Trivia</a> ♥ </p>
+               <a href="./virtual/trivia.html">Pub Trivia</a> ♥ <br>
+  ♥ <a href="./virtual/rvo-faq.html">FAQ</a> ♥ <a href="./virtual/schedule.html">Programming and Schedule</a> ♥
+              <a href="./virtual/charity.html">Charity Drawing</a> ♥ 
+             </p>
 <hr id ="schedule">
 <h4 class="section-header">Event Timeline and Schedule</h4>
 <p>October 10: Submission forms open for tea party, pub trivia, fashion walk and coord contest, and charity drawing.<br>
 November 2: Discord server opens<br>
-November 3: Submission forms close for tea party, pub trivia, and fashion walk and coord contest.<br>
+November 10: Submission forms close for tea party, pub trivia, and fashion walk and coord contest.<br>
 November 13: Brand launches and sales begin<br>
 November 13 - 15: Panels and activities<br>
 November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
