Move around affiliates again; add discord link

--- a/virtual.html
+++ b/virtual.html
@@ -106,7 +106,7 @@
 <hr id ="schedule">
 <h4 class="section-header">Event Timeline and Schedule</h4>
 <p>October 10: Submission forms open for tea party, pub trivia, fashion walk and coord contest, and charity drawing.<br>
-November 2: Discord server opens<br>
+November 2: Discord server opens - <a href="https://discord.com/invite/tBCdGGA">JOIN NOW!</a> <br>
 November 10: Submission forms close for tea party, pub trivia, and fashion walk and coord contest.<br>
 November 13: Brand launches and sales begin<br>
 November 13 - 15: Panels and activities<br>
@@ -143,12 +143,13 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
 </div>
 <div class="col-md-4 affiliate">
 <a href="https://www.etsy.com/shop/KiraKiraKawaiiShoppe">Kira Kira Kawaii Shoppe</a><br>
-<a href="https://oddmonster.co/">Odd Monster</a>
+<a href="https://oddmonster.co/">Odd Monster</a><br>
+<a href="https://shop.prettyprincess.club">PPC Merch Shop</a>
 </div>
 <div class="col-md-4 affiliate">
-  <a href="https://shop.prettyprincess.club">PPC Merch Shop</a><br>
 <a href="https://www.puvithel.com/">Puvithel</a><br>
-<a href="http://www.tournewsoul.com/">Tour New Soul</a>
+<a href="http://www.tournewsoul.com/">Tour New Soul</a><br>
+<a href="http://tulutulu.xyz/">TuluTulu</a>
 </div>
 <h4 class="section-header">Prize Sponsors</h4><br>
 <div class="col-md-4 affiliate">
@@ -167,10 +168,10 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
 <div class="col-md-4 affiliate">
   <a href="https://www.bayareakei.org/">Bay Area Kei</a><br>
 <a href="https://theblackribbon.com/">The Black Ribbon</a><br>
-<a href="https://www.thedecorafactory.com/">The Decora Factory</a><br>
-<a href="https://kaetia.carrd.co/#ppcvirtualtable">KaetShop</a>
+<a href="https://www.thedecorafactory.com/">The Decora Factory</a>
 </div>
 <div class="col-md-4 affiliate">
+  <a href="https://kaetia.carrd.co/#ppcvirtualtable">KaetShop</a><br>
   <a href="https://kskawaii.com/">Kuroshiro Kawaii</a><br>
 <a href="https://www.etsy.com/shop/Lavendorium">Lavendorium</a><br>
 <a href="https://prettysour.com/">Pretty Sour</a>
@@ -178,8 +179,7 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
 <div class="col-md-4 affiliate">
   <a href="https://www.etsy.com/shop/starsweets">Star Sweets</a><br>
 <a href="https://www.sugarstarcafe.com/">Sugarstar Cafe</a><br>
-<a href="https://www.etsy.com/shop/SweetPastelPeach">Sweet Pastel Peach</a><br>
-<a href="http://tulutulu.xyz/">TuluTulu</a>
+<a href="https://www.etsy.com/shop/SweetPastelPeach">Sweet Pastel Peach</a>
 </div>
 <p/>
 
