--- a/virtual/schedule.html
+++ b/virtual/schedule.html
@@ -92,9 +92,76 @@
 </div>
   <center>
 <div class="row content">
-<h4 class="section-header">Coming Soon!</h4>
-<p>We are hard at work planning our Royal Vegas Online content schedule. Please check back soon for more information.</p>
-
+<h4 class="section-header">Royal Vegas Online Weekend Schedule</h4>
+<p>All panels hosted at <a href="https://twitch.tv/jfashionondemand">https://twitch.tv/jfashionondemand</a> unless otherwise specified</p>
+<h5 class="section-header">Friday, November 13</h5>
+<h6 class="section-header">6:00 PM ET / 3:00 PM PT: Opening Ceremony + Lolita Fashion Pub Trivia</h6>
+<p>MC: <a href="https://www.ghostgirlgoods.com/">Alexia</a> </p>
+<p>Get together in teams of 6 for Lolita Fashion Pub Trivia. Test your knowledge of the fashion, our favorite inspirations, and more over 6 eclectic rounds of 8 questions each. Prizes for the 1st place team. Free Agents welcome! <a href="./trivia.html">Learn more and sign up.</a>
+<h6 class="section-header">8:15 PM ET / 5:15 PM PT: DIY with PPC: <a href="https://prettyprincessclub.substack.com/p/make-the-rvo-signature-cocktail">Vegas Royal-Tea Cocktail</a> Mix-Along</h6>
+<p>Hosted by Nif</p>
+<p>Looking for a little vacation in a glass? Grab a pouch of our <a href="https://shop.prettyprincess.club/product/vegas-royal-tea/8">signature Vegas Royal-Tea</a> from our <a href="https://shop.prettyprincess.club/">merch store</a> and get ready for a DIY cocktail mix-along. Check our <a href="https://prettyprincessclub.substack.com/p/make-the-rvo-signature-cocktail">blog post</a> for all the ingredients and steps to do in advance, and get ready to feel like Royalty.</p>
+<h6 class="section-header">9:00 PM ET / 6:00 PM PT: Turn up with DJ JIMNICRICKET</h6>
+<p>Hosted by <a href="https://soundcloud.com/jimnicricket">DJ JIMNICRICKET</a> on <a href="https://twitch.tv/jimnicricket">https://twitch.tv/jimnicricket</a></p>
+<p>Get hype and dance along with a live DJ set guaranteed to make your evening happy.</p>
+<h5 class="section-header">Saturday, November 14</h5>
+<h6 class="section-header">11:00 AM ET / 8:00 AM PT: Building A Local Kawaii Community</h6>
+<p>Hosted by <a href="http://www.ipukekawaii.com/">Imani</a> on <a href="https://www.twitch.tv/ipukekawaii">https://twitch.tv/ipukekawaii</a></p>
+<p>Want to gather more kawaii friends & make space in your city? Here’s where you can learn how to gather, fair ways to lead & where local comms fit in the worldwide kawaii tribe.</p>
+<h6 class="section-header">12:15 PM ET / 9:15 AM PT: Discovering Your Kawaii with GHOST GIRL GOODS</h6>
+<p>Hosted by <a href="https://www.ghostgirlgoods.com/">Alexia</a> on <a href="https://www.twitch.tv/ghostgirlgoods">https://twitch.tv/ghostgirlgoods</a></p>
+<p>A timeline of GHOST GiRL GOODS, a peek into her work with Japanese brands/designers, and her message to help others find their kawaii. GHOST GiRL presents a fun panel filled with cool stories and photos from her fashion brand adventure!</p>
+<h6 class="section-header">1:30 PM ET / 10:30 AM PT: Lolita 202: Advancing Your Accessories</h6>
+<p>Hosted by <a href="http://instagram.com/mintypile">Mindy</a></p>
+<p>Got the basics of lolita fashion down, but want to step up your coord game? This panel will give specific tips and tricks to add variety to your wardrobe and teach you how to wear your main pieces in new ways.</p>
+<h6 class="section-header">2:45 PM ET / 11:45 AM PT: Altering Brand</h6>
+<p>Hosted by <a href="https://www.youtube.com/channel/UC4N5MCxUmwV-yLHsAjuo9MQ">Ruthie</a></p>
+<p>Ever wondered how to alter and adjust your wardrobe to fit? Follow Ruthie as she adds panels to an Angelic Pretty JSK in real time, answering questions and going step by step in the process.</p>
+<h6 class="section-header">4:30 PM ET / 1:30 PM PT: Street fashion + Filmmaking</h6>
+<p>Hosted by <a href="https://www.youtube.com/user/molyacool">Molly Metaphora</a></p>
+<p>Join independent filmmaker Molly Metaphora to discuss integrating lolita fashion into filmmaking, and why so many movies suck at representing street fashion styles.</p>
+<h6 class="section-header">6:15 PM ET / 3:15 PM PT: Kawaii Riot: Empathy 101</h6>
+<p>Hosted by <a href="https://www.kawaiiriot.org/">Kami X, Jadedisland, Tsuyo, and Shayla</a></p>
+<p>Voices from Kawaii Riot will be running a workshop on understanding and applications of empathy both in-person and online. </p>
+<h6 class="section-header">7:30 PM ET / 4:30 PM PT: Alternative Fashion and Sustainability: What’s the Connection</h6>
+<p>Hosted by <a href="https://www.kawaiiriot.org/">Cora Maria, Manon Marguerite, and Avina Kei</a></p>
+<p>Sustainability is one of the biggest conversations in the fashion industry right now, but what exactly is it and how does it relate to alternative fashion? In this panel, we aim to not only educate you on this important topic, but explain how a sustainable mindset can enhance your experience with fashion.</p>
+<h6 class="section-header">8:45 PM ET / 5:45 PM PT: Starting & Growing a YouTube Channel</h6>
+<p>Hosted by <a href="https://www.youtube.com/channel/UC6Kk8rDRYho8quyual49hMA">Kimbuucha</a></p>
+<p>Join Kim for straightforward talk about starting and growing a YouTube channel.</p>
+<h6 class="section-header">10:15 PM ET / 7:15 PM PT: Royal Vegas Fashion Walk</h6>
+<p>MC: <a href="https://www.ghostgirlgoods.com/">Alexia</a> </p>
+<p>Watch all the entries to the Royal Vegas Online fashion walk, and then vote for your favorite to win the coord contest! <a href="./contest.html">Find out more and sign up here.</a>
+<h6 class="section-header">10:45 PM ET / 7:45 PM PT: Lolitas in the Fashion Industry: Q&A Panel</h6>
+<p>Hosted by <a href="https://www.instagram.com/obsixwi/">Obsixwi</a>, <a href="https://theblackribbon.com/">Halley</a>, <a href="https://www.lomoloungewear.com/">Ian</a>, <a href="https://www.lilith-et-adalia.com">Aria</a>, Stephanie, Seams_witch, Oli, and Marie Dauphine</p>
+<p>Have you ever wondered what it's like to work in the fashion industry? Are you someone considering a fashion degree, or do you want to start your business? Maybe, you're just looking for answers about how production, sourcing, and pricing works. Several lolitas who have worked at various levels in the fashion industry are here to answer your questions! </p>
+<h6 class="section-header">12:00 AM ET / 9:00 PM PT: Las Vegas for First-Timers</h6>
+<p>Hosted by Nif</p>
+<p>Planning for Royal Vegas Retreat 2021, but never been to Las Vegas? Nif is here with (pre-pandemic) tips, tricks, and advice for your first time on the Vegas Strip and beyond.</p>
+<h6 class="section-header">1:15 AM ET / 10:15 PM PT: DIY with Paradise Rose - Bat Wing Headbands</h6>
+<p>Hosted by <a href="https://www.paradiseroseshop.com/">Lili</a> on <a href="https://www.twitch.tv/lilianaavriel">https://twitch.tv/lilianaavriel</a></p>
+<p>Learn how to make a bat wing headband with the designer of Paradise Rose Shop. During the panel you’ll learn everything you need to know about how these headbands are made. Kits are available to purchase for the event, or even after as the panel will be recorded, on the <a href="https://www.etsy.com/shop/ParadiseRose">Paradise Rose Shop Etsy page</a>: <a href="https://www.etsy.com/shop/ParadiseRose">https://etsy.com/shop/ParadiseRose</a>.</p>
+<h5 class="section-header">Sunday, November 15</h5>
+<h6 class="section-header">11:00 AM ET / 8:00 AM PT: Action Lolita: Lolita Meets Extreme Sports</h6>
+<p>Hosted by <a href="https://www.youtube.com/channel/UCnBky07AUG1jgvoJXCwpJvw">Fluffy Kawaii Jo</a>, Florian, Maryanne, Renaud, Pyl</p>
+<p>Discover Action Lolita, the web series where 3 lolitas try extreme sports with their voluminous dresses! Imagine doing pole dance, a rope course, cheerleading or even rock climbing with a petticoat or a crinoline! Episode 7, Axe Throwing, will be shown in an exclusive preview showing. Part of the cast and crew will be there answer your questions and share their experience.</p>
+<h6 class="section-header">12:15 PM ET / 9:15 AM PT: DIY with Eat Me Ink Me: Head-bows!</h6>
+<p>Hosted by <a href="https://eatmeinkme.com/">Zeloco</a></p>
+<p>Learn how to make a head-bow (or any bow, really) following my simple tutorial. Some sewing will be required, but don't be afraid to try anyway! You'll be surprised! 
+You will learn how to make a basic bow as well as how to alter the design to make it more you. I will be sharing tips and tricks and answering any burning questions you might have.</p>
+<p>Supplies you will need: pencil; ruler; A4 sized piece of paper; about double size of fabric; needle/thread (or sewing machine); any trim or charms that you might have laying around (optional); a headband/hairclip/brooch pinback.</p>
+<h6 class="section-header">2:00 PM ET / 11:00 AM PT: Lolita Laundry</h6>
+<p>Hosted by <a href="https://www.instagram.com/_avina_/">Avina-Kei</a></p>
+<p>Had a little too much fun at a meet and need help treating a stain? Purchased an item secondhand with unknown damages? Has your white OP started to match your ivory socks? This panel will walk you through the process of treating a stain from start to finish, as well as addressing common misconceptions and how to store your clothes to prolong their life.</p>
+<h6 class="section-header">3:15 PM ET / 12:15 PM PT: Self Love and Skin Care</h6>
+<p>Hosted by <a href="https://dollfille.bigcartel.com/">Dollfille</a> on <a href="https://www.twitch.tv/dollfille">https://twitch.tv/dollfille</a></p>
+<p>Join Dollfille as she walks you through her skincare routine after a long day of wearing heavy makeup; discussing her favorite products, makeup removal tips, self love, facial massage, and the importance of respecting and caring for whatever type of body you reside in.</p>
+<h6 class="section-header">5:00 PM ET / 2:00 PM PT: Tea Party</h6>
+<p>Hosted on the <a href="https://discord.com/invite/tBCdGGA">Bay Area Kei Discord server</a></p>
+<p>Pour yourself a cup of tea and settle in for afternoon tea with new (or old) friends. Enjoy chill discussion over your favorite food or beverage with serious, like-minded fashionistas. <a href="./tea.html">Find out more and sign up here.</a></p>
+<h6 class="section-header">7:00 PM ET / 4:00 PM PT: Closing Ceremony</h6>
+<p>Hosted by PPC, <a href="https://www.instagram.com/jfashionondemand/">JFashion on Demand</a>, <a href="https://bayareakei.org">Bay Area Kei</a>, and friends.</p>
+<p>We announce contest winners, say thank you to all the wonderful people who made this happen, and tell you what's next in the world of virtual J-fashion events!</p>
 <hr id="substack">
     <p>To get the latest info about Royal Vegas Online before it hits social media, <a href="https://prettyprincessclub.substack.com">subscribe to our Substack list!</a> We promise not to spam you, and you can unsubscribe at any time.</p>
     <hr id ="insta">
