Point to PRS' etsy shop

--- a/virtual.html
+++ b/virtual.html
@@ -187,7 +187,7 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
 <div class="col-md-4 affiliate">
 <a href="https://www.etsy.com/shop/KiraKiraKawaiiShoppe">Kira Kira Kawaii Shoppe</a><br>
 <a href="https://oddmonster.co/">Odd Monster</a><br>
-<a href="https://https://www.paradiseroseshop.com/">Paradise Rose Shop</a><br>
+<a href="https://www.etsy.com/shop/ParadiseRose">Paradise Rose Shop</a><br>
 <a href="https://shop.prettyprincess.club">PPC Merch Shop</a>
 </div>
 <div class="col-md-4 affiliate">
