--- a/virtual/schedule.html
+++ b/virtual/schedule.html
@@ -139,7 +139,7 @@
 <p>Hosted by Nif</p>
 <p>Planning for Royal Vegas Retreat 2021, but never been to Las Vegas? Nif is here with (pre-pandemic) tips, tricks, and advice for your first time on the Vegas Strip and beyond.</p>
 <h6 class="section-header">1:15 AM ET / 10:15 PM PT: DIY with Paradise Rose - Bat Wing Headbands</h6>
-<p>Hosted by <a href="https://www.paradiseroseshop.com/">Lili</a> on <a href="https://www.twitch.tv/lilianaavriel">https://twitch.tv/lilianaavriel</a></p>
+<p>Hosted by <a href="https://www.etsy.com/shop/ParadiseRose">Lili</a> on <a href="https://www.twitch.tv/lilianaavriel">https://twitch.tv/lilianaavriel</a></p>
 <p>Learn how to make a bat wing headband with the designer of Paradise Rose Shop. During the panel you’ll learn everything you need to know about how these headbands are made. Kits are available to purchase for the event, or even after as the panel will be recorded, on the <a href="https://www.etsy.com/shop/ParadiseRose">Paradise Rose Shop Etsy page</a>: <a href="https://www.etsy.com/shop/ParadiseRose">https://etsy.com/shop/ParadiseRose</a>.</p>
 <h5 class="section-header">Sunday, November 15</h5>
 <h6 class="section-header">11:00 AM ET / 8:00 AM PT: Action Lolita: Lolita Meets Extreme Sports</h6>
