rearrange brands again

--- a/virtual.html
+++ b/virtual.html
@@ -180,6 +180,7 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
     <hr id="releases">
 <h4 class="section-header">Releases and Promotions for 11/13 - 11/15</h4>
 <div class="col-md-4 affiliate">
+  <a href="https://www.thedecorafactory.com/">The Decora Factory</a><br>
 <a href="https://fluffytori.com/en/">Fluffy Tori</a><br>
 <a href="https://www.ghostgirlgoods.com/">GHOST GiRL GOODS</a><br>
 <a href="https://kanekoshop.com">Kaneko</a>
@@ -187,10 +188,10 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
 <div class="col-md-4 affiliate">
 <a href="https://www.etsy.com/shop/KiraKiraKawaiiShoppe">Kira Kira Kawaii Shoppe</a><br>
 <a href="https://oddmonster.co/">Odd Monster</a><br>
-<a href="https://www.etsy.com/shop/ParadiseRose">Paradise Rose Shop</a><br>
-<a href="https://shop.prettyprincess.club">PPC Merch Shop</a>
+<a href="https://www.etsy.com/shop/ParadiseRose">Paradise Rose Shop</a>
 </div>
 <div class="col-md-4 affiliate">
+  <a href="https://shop.prettyprincess.club">PPC Merch Shop</a><br>
 <a href="https://www.puvithel.com/">Puvithel</a><br>
 <a href="http://www.tournewsoul.com/">Tour New Soul</a><br>
 <a href="http://tulutulu.xyz/">TuluTulu</a>
@@ -212,10 +213,9 @@ November 15, 2 PM PT: Tea party, last call for charity drawing entries</p>
 <div class="col-md-4 affiliate">
   <a href="https://www.bayareakei.org/">Bay Area Kei</a><br>
 <a href="https://theblackribbon.com/">The Black Ribbon</a><br>
-<a href="https://www.thedecorafactory.com/">The Decora Factory</a>
+<a href="https://kskawaii.com/">Kuroshiro Kawaii</a>
 </div>
 <div class="col-md-4 affiliate">
-  <a href="https://kskawaii.com/">Kuroshiro Kawaii</a><br>
 <a href="https://www.etsy.com/shop/Lavendorium">Lavendorium</a><br>
 <a href="https://prettysour.com/">Pretty Sour</a>
 </div>
