--- a/virtual/schedule.html
+++ b/virtual/schedule.html
@@ -133,7 +133,7 @@
 <p>MC: <a href="https://www.ghostgirlgoods.com/">Alexia</a> </p>
 <p>Watch all the entries to the Royal Vegas Online fashion walk, and then vote for your favorite to win the coord contest! <a href="./contest.html">Find out more and sign up here.</a>
 <h6 class="section-header">10:45 PM ET / 7:45 PM PT: Lolitas in the Fashion Industry: Q&A Panel</h6>
-<p>Hosted by <a href="https://www.instagram.com/obsixwi/">Obsixwi</a>, <a href="https://theblackribbon.com/">Halley</a>, <a href="https://www.lomoloungewear.com/">Ian</a>, <a href="https://www.lilith-et-adalia.com">Aria</a>, Stephanie, Seams_witch, Oli, and Marie Dauphine</p>
+<p>Hosted by <a href="https://www.instagram.com/obsixwi/">Obsixwi</a>, <a href="https://theblackribbon.com/">Halley</a>, <a href="https://www.lomoloungewear.com/">Ian</a>, <a href="https://www.lilith-et-adalia.com">Aria</a>, <a href="https://www.instagram.com/soranoito/">Stephanie</a>, <a href="https://www.instagram.com/seams_witch/">Seams_witch</a>, and <a href="https://www.instagram.com/iampotaeto/">Oli</a></p>
 <p>Have you ever wondered what it's like to work in the fashion industry? Are you someone considering a fashion degree, or do you want to start your business? Maybe, you're just looking for answers about how production, sourcing, and pricing works. Several lolitas who have worked at various levels in the fashion industry are here to answer your questions! </p>
 <h6 class="section-header">12:00 AM ET / 9:00 PM PT: Las Vegas for First-Timers</h6>
 <p>Hosted by Nif</p>
@@ -143,7 +143,7 @@
 <p>Learn how to make a bat wing headband with the designer of Paradise Rose Shop. During the panel you’ll learn everything you need to know about how these headbands are made. Kits are available to purchase for the event, or even after as the panel will be recorded, on the <a href="https://www.etsy.com/shop/ParadiseRose">Paradise Rose Shop Etsy page</a>: <a href="https://www.etsy.com/shop/ParadiseRose">https://etsy.com/shop/ParadiseRose</a>.</p>
 <h5 class="section-header">Sunday, November 15</h5>
 <h6 class="section-header">11:00 AM ET / 8:00 AM PT: Action Lolita: Lolita Meets Extreme Sports</h6>
-<p>Hosted by <a href="https://www.youtube.com/channel/UCnBky07AUG1jgvoJXCwpJvw">Fluffy Kawaii Jo</a>, Florian, Maryanne, Renaud, Pyl</p>
+<p>Hosted by <a href="https://www.youtube.com/channel/UCnBky07AUG1jgvoJXCwpJvw">Fluffy Kawaii Jo</a>, Florian, Maryanne, Renaud, and Pyl</p>
 <p>Discover Action Lolita, the web series where 3 lolitas try extreme sports with their voluminous dresses! Imagine doing pole dance, a rope course, cheerleading or even rock climbing with a petticoat or a crinoline! Episode 7, Axe Throwing, will be shown in an exclusive preview showing. Part of the cast and crew will be there answer your questions and share their experience.</p>
 <h6 class="section-header">12:15 PM ET / 9:15 AM PT: DIY with Eat Me Ink Me: Head-bows!</h6>
 <p>Hosted by <a href="https://eatmeinkme.com/">Zeloco</a></p>
