Update credit for action lolita

--- a/virtual/schedule.html
+++ b/virtual/schedule.html
@@ -143,7 +143,7 @@
 <p>Learn how to make a bat wing headband with the designer of Paradise Rose Shop. During the panel you’ll learn everything you need to know about how these headbands are made. Kits are available to purchase for the event, or even after as the panel will be recorded, on the <a href="https://www.etsy.com/shop/ParadiseRose">Paradise Rose Shop Etsy page</a>: <a href="https://www.etsy.com/shop/ParadiseRose">https://etsy.com/shop/ParadiseRose</a>.</p>
 <h5 class="section-header">Sunday, November 15</h5>
 <h6 class="section-header">11:00 AM ET / 8:00 AM PT: Action Lolita: Lolita Meets Extreme Sports</h6>
-<p>Hosted by <a href="https://www.youtube.com/channel/UCnBky07AUG1jgvoJXCwpJvw">Fluffy Kawaii Jo</a>, Florian, Maryanne, Renaud, and Pyl</p>
+<p>Hosted by <a href="https://www.youtube.com/channel/UCnBky07AUG1jgvoJXCwpJvw">Fluffy Kawaii Jo</a>, Florian, and Maryanne</p>
 <p>Discover Action Lolita, the web series where 3 lolitas try extreme sports with their voluminous dresses! Imagine doing pole dance, a rope course, cheerleading or even rock climbing with a petticoat or a crinoline! Episode 7, Axe Throwing, will be shown in an exclusive preview showing. Part of the cast and crew will be there answer your questions and share their experience.</p>
 <h6 class="section-header">12:15 PM ET / 9:15 AM PT: DIY with Eat Me Ink Me: Head-bows!</h6>
 <p>Hosted by <a href="https://eatmeinkme.com/">Zeloco</a></p>
